"""initial schema

Revision ID: 40469500dd70
Revises: 
Create Date: 2026-04-30 10:48:26.371902

"""
from typing import Sequence, Union

from alembic import op
import sqlalchemy as sa


# revision identifiers, used by Alembic.
revision: str = '40469500dd70'
down_revision: Union[str, Sequence[str], None] = None
branch_labels: Union[str, Sequence[str], None] = None
depends_on: Union[str, Sequence[str], None] = None


def upgrade() -> None:
    """Upgrade schema."""
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('grupos',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('nome', sa.String(length=100), nullable=False),
    sa.Column('descricao', sa.String(), nullable=True),
    sa.Column('status', sa.String(length=20), nullable=False),
    sa.Column('criado_em', sa.DateTime(), nullable=False),
    sa.Column('atualizado_em', sa.DateTime(), nullable=False),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('grupos_alimentos',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('nome', sa.String(length=100), nullable=False),
    sa.Column('descricao', sa.String(), nullable=True),
    sa.Column('cor', sa.String(length=7), nullable=True),
    sa.Column('icone', sa.String(length=10), nullable=True),
    sa.Column('criado_em', sa.DateTime(), nullable=False),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('nome')
    )
    op.create_table('usuarios',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('nome', sa.String(length=100), nullable=False),
    sa.Column('email', sa.String(length=255), nullable=False),
    sa.Column('senha_hash', sa.String(length=255), nullable=False),
    sa.Column('perfil', sa.String(length=20), nullable=False),
    sa.Column('ativo', sa.Boolean(), nullable=False),
    sa.Column('criado_em', sa.DateTime(), nullable=False),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('email')
    )
    op.create_table('alimentos',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('nome', sa.String(length=100), nullable=False),
    sa.Column('grupo_alimento_id', sa.Integer(), nullable=True),
    sa.Column('peso_padrao_kg', sa.Numeric(precision=5, scale=2), nullable=False),
    sa.Column('unidade', sa.String(length=20), nullable=False),
    sa.Column('classe_yolo', sa.String(length=50), nullable=True),
    sa.Column('descricao', sa.String(), nullable=True),
    sa.Column('ativo', sa.Boolean(), nullable=False),
    sa.Column('criado_em', sa.DateTime(), nullable=False),
    sa.ForeignKeyConstraint(['grupo_alimento_id'], ['grupos_alimentos.id'], ondelete='SET NULL'),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('nome')
    )
    op.create_table('alunos',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('nome', sa.String(length=100), nullable=False),
    sa.Column('ra', sa.String(length=20), nullable=False),
    sa.Column('grupo_id', sa.Integer(), nullable=False),
    sa.Column('ativo', sa.Boolean(), nullable=False),
    sa.Column('criado_em', sa.DateTime(), nullable=False),
    sa.ForeignKeyConstraint(['grupo_id'], ['grupos.id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('ra')
    )
    op.create_table('itens_declarados',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('grupo_id', sa.Integer(), nullable=False),
    sa.Column('nome_alimento', sa.String(length=100), nullable=False),
    sa.Column('marca', sa.String(length=100), nullable=True),
    sa.Column('quantidade', sa.Integer(), nullable=False),
    sa.Column('peso_declarado_kg', sa.Numeric(precision=8, scale=2), nullable=False),
    sa.Column('observacao', sa.String(), nullable=True),
    sa.Column('criado_em', sa.DateTime(), nullable=False),
    sa.ForeignKeyConstraint(['grupo_id'], ['grupos.id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('sessoes',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('grupo_id', sa.Integer(), nullable=False),
    sa.Column('usuario_id', sa.Integer(), nullable=True),
    sa.Column('inicio', sa.DateTime(), nullable=False),
    sa.Column('fim', sa.DateTime(), nullable=True),
    sa.Column('status', sa.String(length=20), nullable=False),
    sa.Column('total_kg', sa.Numeric(precision=8, scale=2), nullable=False),
    sa.Column('total_itens', sa.Integer(), nullable=False),
    sa.Column('criado_em', sa.DateTime(), nullable=False),
    sa.ForeignKeyConstraint(['grupo_id'], ['grupos.id'], ondelete='CASCADE'),
    sa.ForeignKeyConstraint(['usuario_id'], ['usuarios.id'], ondelete='SET NULL'),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('deteccoes',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('sessao_id', sa.Integer(), nullable=False),
    sa.Column('alimento_id', sa.Integer(), nullable=True),
    sa.Column('alimento_id_original', sa.Integer(), nullable=True),
    sa.Column('peso_kg', sa.Numeric(precision=5, scale=2), nullable=False),
    sa.Column('quantidade', sa.Integer(), nullable=False),
    sa.Column('confianca', sa.Numeric(precision=3, scale=2), nullable=True),
    sa.Column('imagem_path', sa.String(length=500), nullable=True),
    sa.Column('corrigido_manualmente', sa.Boolean(), nullable=False),
    sa.Column('criado_em', sa.DateTime(), nullable=False),
    sa.ForeignKeyConstraint(['alimento_id'], ['alimentos.id'], ondelete='SET NULL'),
    sa.ForeignKeyConstraint(['alimento_id_original'], ['alimentos.id'], ondelete='SET NULL'),
    sa.ForeignKeyConstraint(['sessao_id'], ['sessoes.id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id')
    )
    # ### end Alembic commands ###


def downgrade() -> None:
    """Downgrade schema."""
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_table('deteccoes')
    op.drop_table('sessoes')
    op.drop_table('itens_declarados')
    op.drop_table('alunos')
    op.drop_table('alimentos')
    op.drop_table('usuarios')
    op.drop_table('grupos_alimentos')
    op.drop_table('grupos')
    # ### end Alembic commands ###
